# GraphRag-Personal-Repository

./: .env.example  .gitignore  PROJECT_CONTEXT.md  README.md  _test_fullchain.py  docker-compose.yml  opencode.json  smoke_test.py  企业工资管理系统-数据流图.drawio  企业工资管理系统-数据流图.html
.tmp/: t3.py  test_agent.py  (+4 more)
ai-service/: README.md  pyproject.toml  run_ai_service.py
ai-service/app/: main.py
ai-service/app/agents/: base.py  workflow.py
ai-service/app/api/: router.py
ai-service/app/api/routes/: agent.py  health.py  ingest.py  rag.py
ai-service/app/core/: config.py  constants.py  tracing.py
ai-service/app/db/: repositories.py
ai-service/app/prompts/: agent_invoke.v1.txt  rag_answer.v1.txt  registry.py
ai-service/app/rag/chunkers/: __init__.py  base.py
ai-service/app/rag/embeddings/: __init__.py  base.py
ai-service/app/rag/evaluators/: __init__.py  base.py  strategy_comparison.py
ai-service/app/rag/generators/: base.py
ai-service/app/rag/graph/: __init__.py  extractors.py
ai-service/app/rag/loaders/: base.py
ai-service/app/rag/parsers/: base.py  registry.py
ai-service/app/rag/query_transformers/: base.py
ai-service/app/rag/rerankers/: __init__.py  base.py
ai-service/app/rag/retrievers/: base.py
ai-service/app/schemas/: agent.py  common.py  ingest.py  rag.py
ai-service/app/services/: agent_service.py  ingest_service.py  rag_service.py
ai-service/tests/: test_advanced_rag_strategy.py  test_agent_workflow.py  test_basic_rag_pipeline.py  test_openai_compatible_adapters.py  test_parent_child_chunker.py  test_strategy_comparison_evaluator.py
(+382 files in other folders)
