[project]
name = "ai-service"
version = "0.1.0"
description = "FastAPI AI/RAG service skeleton for the monorepo."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.95.2",
  "pg8000>=1.31.0,<2.0.0",
  "uvicorn==0.24.0.post1",
  "pydantic==1.10.26",
  "python-docx>=1.1.0,<2.0.0",
  "httpx>=0.27.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0,<9.0.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
